2008-10-14  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/upload/main.c:

	Use g_main_loop_unref() instead of g_object_unref() to unref main_loop.

2008-10-13  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/upload/item-creation.c:
	* src/upload/main.c:
	* src/upload/main.h:
	* src/upload/transfer.c:

	Support uploading of multiple files.

2008-10-13  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/upload/transfer.c:

	Display the name of the file being transfered.

2008-10-13  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/upload/main.c:

	Invert the order of commandline arguments.

2008-10-13  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* configure.ac:
	* src/Makefile.am:
	* src/upload/Makefile.am:
	* src/upload/container-search.c:
	* src/upload/container-search.h:
	* src/upload/control_point.c:
	* src/upload/control_point.h:
	* src/upload/item-creation.c:
	* src/upload/item-creation.h:
	* src/upload/main.c:
	* src/upload/main.h:
	* src/upload/transfer.c:
	* src/upload/transfer.h:

	Introducing gupnp-upload: A small utility commandline application that
	uploads files to MediaServers.

2008-10-13  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* configure.ac:

	Require GIO >= 2.12.

2008-10-01  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/universal-cp/action-dialog.c:

	A bit more beautiful error dialog. :)

2008-10-01  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/universal-cp/action-dialog.c:

	Use a message dialog to display action invocation errors rather than a
	warning on the console. Fixes #936.

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/playlist-treeview.c:

	Convert the check for top children to be based on the ID of the
	container we browsed rather than the parentID of the DIDL object. We
	should not be assuming that the actual ID of the root container is
	guaranteed to be "0".

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/playlist-treeview.c:
