@@ -1,3 +1,9 @@
+2008-10-17  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>
+
+	* src/upload/main.c:
+
+	Small refactoring.
+
 2008-10-14  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>
 
 	* src/upload/main.c:
